--- a/ddf/Cargo.toml
+++ b/ddf/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }
+color-eyre = "~0.6"
+tokio = "1.37.0"
+poem = "~3.0"
+poem-openapi = { version = "~5.0", features = ["swagger-ui", "openapi-explorer"] }
+serde = { version = "1.0.201", features = ["derive"] }
