--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 [dependencies]
 tokio = { version = "~1.37", features = ["rt", "rt-multi-thread", "macros"] }
 color-eyre = "~0.6"
+ddf = { path = "ddf"}
+gps = { path = "gps"}
+pim = { path = "pim"}
