--- a/ddf/.cargo/config.toml
+++ b/ddf/.cargo/config.toml
@@ -1,2 +1,4 @@
 [env]
 DATABASE_URL = "postgresql://admin:admin@localhost:5432/ddf"
+HOST_URL = "0.0.0.0:7100"
+DOCUMENTATION_URL = "localhost:7100"
