--- a/ddf/Cargo.toml
+++ b/ddf/Cargo.toml
@@ -12,3 +12,6 @@ tokio = "1.37.0"
 poem = "~3.0"
 poem-openapi = { version = "~5.0", features = ["swagger-ui", "openapi-explorer"] }
 serde = { version = "1.0.201", features = ["derive"] }
+
+[lib]
+path = "src/models.rs"
