--- a/pim/Cargo.toml
+++ b/pim/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
+sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }
 color-eyre = "~0.6"
 tokio = "1.37.0"
+poem = "~3.0"
+poem-openapi = { version = "~5.0", features = ["swagger-ui", "openapi-explorer"] }
+serde = { version = "1.0.201", features = ["derive"] }
 
 [lib]
 path = "src/models.rs"
