--- a/pim/.cargo/config.toml
+++ b/pim/.cargo/config.toml
@@ -1,2 +1,4 @@
 [env]
 DATABASE_URL = "postgresql://admin:admin@localhost:5434/pim"
+HOST_URL = "0.0.0.0:7300"
+DOCUMENTATION_TARGET_URL = "localhost:7300"
