- Fixed docker-compose stuff - Improved logging

--- a/Dockerfile-ddf
+++ b/Dockerfile-ddf
@@ -1,21 +1,24 @@
 FROM lukemathwalker/cargo-chef:latest AS chef
-WORKDIR /gps
 LABEL authors="jakob753951"
 
+WORKDIR /ddf
+
 FROM chef AS planner
-COPY . .
+COPY models/ /models/
+COPY ddf .
 RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef AS builder
-COPY --from=planner /gps/recipe.json recipe.json
+COPY --from=planner /ddf/recipe.json recipe.json
+COPY models/ /models/
 # Build dependencies - this is the caching Docker layer!
 RUN cargo chef cook --release --recipe-path recipe.json
 # Build application
-COPY . .
-RUN cargo build --release --bin gps
+COPY ddf .
+RUN cargo build --release --bin ddf
 
 # We do not need the Rust toolchain to run the binary!
 FROM debian:bookworm AS runtime
-WORKDIR /gps
-COPY --from=builder /gps/target/release/gps /usr/local/bin
-ENTRYPOINT ["/usr/local/bin/gps"]
+WORKDIR /ddf
+COPY --from=builder /ddf/target/release/ddf /usr/local/bin
+ENTRYPOINT ["/usr/local/bin/ddf"]
