--- a/ddf/.cargo/config.toml
+++ b/ddf/.cargo/config.toml
@@ -1,4 +1,4 @@
 [env]
-DATABASE_URL = "postgresql://admin:admin@localhost:5432/ddf"
+DATABASE_URL = "postgresql://admin:admin@ddf_db/ddf"
 HOST_URL = "0.0.0.0:7100"
 DOCUMENTATION_TARGET_URL = "http://localhost:7100"
