--- a/gps/.cargo/config.toml
+++ b/gps/.cargo/config.toml
@@ -1,4 +1,4 @@
 [env]
-DATABASE_URL = "postgresql://admin:admin@localhost:5433/gps"
-HOST_URL = "0.0.0.0:7200"
+DATABASE_URL = "postgresql://admin:admin@gps_db/gps"
+HOST_URL = "0.0.0.0:7100"
 DOCUMENTATION_TARGET_URL = "http://localhost:7200"
