--- a/pim/.cargo/config.toml
+++ b/pim/.cargo/config.toml
@@ -1,4 +1,4 @@
 [env]
-DATABASE_URL = "postgresql://admin:admin@localhost:5434/pim"
-HOST_URL = "0.0.0.0:7300"
+DATABASE_URL = "postgresql://admin:admin@pim_db/pim"
+HOST_URL = "0.0.0.0:7100"
 DOCUMENTATION_TARGET_URL = "http://localhost:7300"
