--- a/ddf/Cargo.toml
+++ b/ddf/Cargo.toml
@@ -14,4 +14,4 @@ poem-openapi = { version = "~5.0", features = ["swagger-ui", "openapi-explorer"]
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 futures = "~0.3"
-models = { path = "/models" }
+models = { path = "../models" }
