--- a/pim/Cargo.toml
+++ b/pim/Cargo.toml
@@ -13,4 +13,4 @@ poem = "~3.0"
 poem-openapi = { version = "~5.0", features = ["swagger-ui", "openapi-explorer"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
-models = { path = "/models" }
+models = { path = "../models" }
