--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,9 +94,9 @@ services:
       HOST_URL: "0.0.0.0:7100"
       DOCUMENTATION_TARGET_URL: "http://localhost:7400"
 
-      DDF_BASE_URL: "http://localhost:7100"
-      GPS_BASE_URL: "http://localhost:7200"
-      PIM_BASE_URL: "http://localhost:7300"
+      DDF_BASE_URL: "http://ddf_server:7100"
+      GPS_BASE_URL: "http://gps_server:7100"
+      PIM_BASE_URL: "http://pim_server:7100"
     ports:
       - 7400:7100
     depends_on:
