--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -10,3 +10,5 @@ sqlx = { version = "~0.7", features = ["postgres", "runtime-tokio", "uuid", "mac
 poem-openapi = { version = "~5.0", features = ["swagger-ui", "openapi-explorer"] }
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
+rand_derive2 = "0.1"
+rand = "0.8"
