--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,10 @@
-workspace = { members = ["ddf", "gps", "models", "pim", "sync_tool"] }
-[package]
-name = "data_merging_rs"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-tokio = { version = "~1.37", features = ["rt", "rt-multi-thread", "macros"] }
-color-eyre = "~0.6"
-models = { path = "models" }
-reqwest = { version = "~0.12", features = ["json"] }
+members = [
+    "sync_tool",
+    "models",
+    "ddf",
+    "gps",
+    "pim",
+]
+resolver = "2"
