--- a/Dockerfile_sync
+++ b/Dockerfile_sync
@@ -1,26 +1,26 @@
 FROM lukemathwalker/cargo-chef:latest AS chef
 LABEL authors="jakob753951"
 
-WORKDIR /sync_tool
+WORKDIR /sync
 
 FROM chef AS planner
 COPY models/ /models/
-COPY sync_tool .
+COPY sync .
 RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef AS builder
-COPY --from=planner /sync_tool/recipe.json recipe.json
+COPY --from=planner /sync/recipe.json recipe.json
 COPY models/ /models/
 # Build dependencies - this is the caching Docker layer!
 RUN cargo chef cook --release --recipe-path recipe.json
 # Build application
-COPY sync_tool .
-RUN cargo build --release --bin sync_tool
+COPY sync .
+RUN cargo build --release --bin sync
 
 # We do not need the Rust toolchain to run the binary!
 FROM debian:bookworm AS runtime
-WORKDIR /sync_tool
-COPY --from=builder /sync_tool/target/release/sync_tool /usr/local/bin
+WORKDIR /sync
+COPY --from=builder /sync/target/release/sync /usr/local/bin
 
 RUN apt-get update && apt-get install -y libssl3 && apt clean && rm -rf /var/lib/apt/lists/*
-ENTRYPOINT ["/usr/local/bin/sync_tool"]
+ENTRYPOINT ["/usr/local/bin/sync"]
