--- a/Dockerfile_sync
+++ b/Dockerfile_sync
@@ -22,5 +22,12 @@ FROM debian:bookworm AS runtime
 WORKDIR /sync
 COPY --from=builder /sync/target/release/sync /usr/local/bin
 
-RUN apt-get update && apt-get install -y libssl3 && apt clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update
+RUN apt-get install -y curl
+RUN apt-get install -y libssl3
+RUN apt clean
+RUN rm -rf /var/lib/apt/lists/*
+
+HEALTHCHECK --start-period=30s --retries=5 --interval=10s --timeout=10s \
+    CMD curl --fail http://localhost:7100/ping || exit 1
 ENTRYPOINT ["/usr/local/bin/sync"]
