--- a/Dockerfile_ddf
+++ b/Dockerfile_ddf
@@ -29,4 +29,6 @@ RUN rm -rf /var/lib/apt/lists/*
 
 HEALTHCHECK --start-period=30s --retries=5 --interval=10s --timeout=10s \
     CMD curl --fail http://localhost:7100/ping || exit 1
+
+STOPSIGNAL sigkill
 ENTRYPOINT ["/usr/local/bin/ddf"]
